# dela

./: README.md  pyproject.toml  tmp.py
.github/workflows/: publish.yml  test.yml
dela/: FileReader.py  ListCommand.py  TagPresentation.py  TagsCommand.py  Todo.py  TodoPresentation.py  TodoRepo.py  __main__.py  comparators.py  file_reader.py  filters.py  list_comand_config.py  list_command.py  logger.py  todo.py  todo_presentation.py  todo_query.py
tests/: file_reader_test.py  list_command_test.py  mock_presentation.py  mock_reader.py  todo_query_test.py
tests/__stubs__/: metadata_today.md
tests/utils/: create_lines.py
