[tool.poetry]
name = "dela"
version = "0.2.2"
description = ""
authors = ["'Anton Shuvalov' <anton@shuvalov.info>"]
license = "MIT"
readme = "README.md"

[tool.pytest.ini_options]
pythonpath = "."

[tool.poetry.scripts]
dela = "dela.__main__:main"

[tool.poetry.dependencies]
python = "^3.8"
docopt = "^0.6.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
blue = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
